# vulnerable_lib_test

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: security-scan.yml  trivy.yml
